--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -33,3 +33,14 @@ body {
 .animate__animated.animate__bounceIn {
   --animate-duration: 2s;
 }
+
+.uwuman {
+  background-color: white;
+  color: black;
+  filter: drop-shadow(0 0 0.75rem rgb(0, 0, 0));
+}
+
+.kktuwu{
+  background-color: blanchedalmond;
+  text-decoration: none;
+}
