--- a/app/scss/components/pagetitle.scss
+++ b/app/scss/components/pagetitle.scss
@@ -5,5 +5,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 70vh;
+    height: 100vh;
+    background-image: url("../assets/pozadie.png");
 }
