--- a/app/scss/globals/reset.scss
+++ b/app/scss/globals/reset.scss
@@ -39,7 +39,7 @@ body {
     min-height: 100vh;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /* A elements that don't have a class get default styles */
