--- a/app/scss/pages/whitelist.scss
+++ b/app/scss/pages/whitelist.scss
@@ -11,4 +11,12 @@
     h1 {
         margin-top: rem(200);
     }
+
+    .id-bg {
+        background-color: white;
+        color: black;
+        border-radius: rem(5);
+        border-color: black;
+        border-style: solid;
+    }
 }
