--- a/app/scss/pages/cleni.scss
+++ b/app/scss/pages/cleni.scss
@@ -4,5 +4,6 @@
     height: 93.65vh;
     padding: rem(50) rem(100);
     background-color: black;
-    background-image: url("../assets/trospympsaci.png");
+    background-image: url("../assets/trospympsaci.jpg");
+    background-size: cover;
 }
