--- a/app/scss/pages/mainpage.scss
+++ b/app/scss/pages/mainpage.scss
@@ -3,5 +3,6 @@
 .mainpage-info {
     padding: rem(50) rem(50);
     background-color: black;
-    background-image: url("../assets/trospyabedrok.png");
+    background-image: url("../assets/trospyabedrok.jpg");
+    background-size: cover;
 }
