--- a/app/scss/pages/whitelist.scss
+++ b/app/scss/pages/whitelist.scss
@@ -6,7 +6,8 @@
     justify-content: center;
     padding: rem(50) rem(100);
     background-color: black;
-    background-image: url("../assets/trospympsaci.png");
+    background-image: url("../assets/wl.jpg");
+    background-size: cover;
 
     h1 {
         margin-top: rem(200);
