--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -8,7 +8,7 @@ button {
     margin: 1.5rem 1rem;
     background-color: gray;
     border-style: none;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     padding: 0.2rem 1rem;
     filter: drop-shadow(1px 1px 5px #000);
     transition: 0.1s;
@@ -16,6 +16,10 @@ button {
 
     &:hover {
         background-color: var(--blue);
+    }
+
+    @include breakpoint(large) {
+        font-size: 1.5rem;
     }
 }
 
@@ -28,5 +32,14 @@ button {
 .btn4 {
     &:hover {
         background-color: var(--green);
+    }
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    @include breakpoint(large) {
+        flex-direction: row;
     }
 }
