--- a/src/scss/globals/typography.scss
+++ b/src/scss/globals/typography.scss
@@ -38,7 +38,7 @@ p {
 ol {
     color: white;
     font-size: 1.3rem;
-    cursor: url("../assets/hlava.png"), auto;
+    cursor: url("/src/images/hlava.png"), auto;
     font-family: var(--font);
 }
 span {
