--- a/src/scss/pages/whitelist.scss
+++ b/src/scss/pages/whitelist.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     padding: rem(50) rem(100);
     background-color: black;
-    background-image: url("../assets/wl.jpg");
+    background-image: url("/src/images/wl.jpg");
     background-size: cover;
 
     h1 {
