--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -6,7 +6,7 @@ footer {
     align-items: center;
     justify-content: center;
     background-color: black;
-    background-image: url(../assets/dia.png);
+    background-image: url(/src/images/dia.png);
     text-shadow: 1px 1px 2px black, 0 0 1em white, 0 0 0.2em black;
 
     .credit {
