--- a/src/scss/pages/mainpage.scss
+++ b/src/scss/pages/mainpage.scss
@@ -3,6 +3,6 @@
 .mainpage-info {
     padding: rem(50) rem(50);
     background-color: black;
-    background-image: url("../assets/trospyabedrok.jpg");
+    background-image: url("/src/images/trospyabedrok.jpg");
     background-size: cover;
 }
