--- a/src/scss/pages/404.scss
+++ b/src/scss/pages/404.scss
@@ -11,3 +11,18 @@
         margin-top: rem(200);
     }
 }
+@include breakpoint-down(medium) {
+    .error {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        margin-left: 0;
+        padding-left: rem(50);
+        padding-top: 0;
+        margin-top: 0;
+        img {
+            width: 300px;
+            margin-bottom: rem(580);
+        }
+    }
+}
