--- a/src/scss/pages/profile.scss
+++ b/src/scss/pages/profile.scss
@@ -1,21 +1,25 @@
 @use "../util" as *;
 
 .profile-head {
-    background-color: white;
+    background-color: none;
     h1,
     p,
     li {
-        color: black;
+        color: white;
     }
     a {
         color: green;
     }
 }
 .profile-main {
-    background-color: white;
+    background-color: none;
     h2,
     h3,
     p {
-        color: black;
+        color: white;
     }
+}
+
+.trospy-profile {
+    background-image: url("/src/images/trospyminiatura.png");
 }
